Live Data/mdapipkg/unpackaged/objects/Entitlement__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Entitlement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EntitlementC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllowedPhoneSupport__c</fullName>
        <formula>CASE(   PlanType__c , 
&quot;Premier&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;), 
&quot;Standard&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;),
&quot;Classic&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;), 
&quot;Essential&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Entitled to Phone Support&quot;),
&quot;No Phone Support&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone/Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_Phone_Support_2__c</fullName>
        <formula>IF(
OR(PlanType__c = &quot;Premier Plan&quot;, PlanType__c =&quot;Standard Plan&quot;,PlanType__c = &quot;Classic Plan&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed Phone Support (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Name</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Entitlement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssociatedProductRange__c</fullName>
        <label>Associated Product Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Entitlement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CasesPerEntitlement__c</fullName>
        <label>Cases Per Entitlement</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipName>Entitlement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Entitlement_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerSuccessManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Entitlement_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntitledHowToQuestions__c</fullName>
        <formula>CASE(  PlanType__c  , 

      &quot;Premier&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Access to How To Questions&quot;), 

      &quot;Standard&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;Classic&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;Essential&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;No Plan Selected&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&quot;How To&quot; Qs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipName>EntitlementC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HowToQs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HowToQs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPerIncident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Per Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NamedAgentEntitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Named Agent (Premier Plan Only)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Entitlement_c1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoLimitText__c</fullName>
        <formula>&quot;No Limit&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Limit Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifyCSMofPendingBreach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify CSM of Pending Breach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfContacts__c</fullName>
        <label>Number Of Contacts</label>
        <summaryForeignKey>ContactEntitlement__c.EntitlementC__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PhoneEmailCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone/Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <label>Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingCases__c</fullName>
        <label>Remaining Cases</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Entitlement_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <formula>IF( (EndDate__c - StartDate__c  &gt;0), &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProductArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Product Area</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Entitlement_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopicID__c</fullName>
        <formula>Entitlement__r.TopicID__c</formula>
        <label>Topic ID</label>
        <type>Text</type>
    </fields>
    <label>Entitlement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LimitConatcts</fullName>
        <active>true</active>
        <description>Limits the number of contacts that can be associated to the Entitlement</description>
        <errorConditionFormula>( PlanType__c = &quot;Premier&quot; &amp;&amp; NumberOfContacts__c  &gt; 8) 
|| 
(PlanType__c = &quot;Essential&quot; &amp;&amp; NumberOfContacts__c &gt; 2) 
|| 
(PlanType__c = &quot;Standard&quot; &amp;&amp; NumberOfContacts__c  &gt; 4)</errorConditionFormula>
        <errorMessage>You have exceeded the amount of authorised contacts for the plan selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MustBePremierForNamedAgent</fullName>
        <active>true</active>
        <description>Must be be a premier plan to have named agent</description>
        <errorConditionFormula>(PlanType__c = &quot;Standard&quot; &amp;&amp; NOT(ISBLANK(NamedAgentEntitlement__c ))) 

|| 

(PlanType__c = &quot;Essential&quot; &amp;&amp; NOT(ISBLANK(NamedAgentEntitlement__c ))) 

|| 

(PlanType__c = &quot;Classic&quot; &amp;&amp; NOT(ISBLANK(NamedAgentEntitlement__c )))</errorConditionFormula>
        <errorMessage>Named Agent can only be associated with Premier Plan entitlements</errorMessage>
    </validationRules>
</CustomObject>